nice address creation and import from wif

--- a/generate_new_public_and_private_key/Makefile
+++ b/generate_new_public_and_private_key/Makefile
@@ -6,7 +6,7 @@ all: my_addr.o
 	g++ -ggdb my_addr.o -o my_addr $(LIBS)
 
 my_addr.o: my_addr.cpp
-	g++  -ggdb $(CFLAGS) my_addr.cpp -c
+	g++  -std=c++17 -ggdb $(CFLAGS) my_addr.cpp -c
 
 clean:
 	rm -f *.o my_addr
